fix in TaksQueryServiceTest